k8s/namespace.yaml

# Namespace - k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyd-production
  labels:
    name: kyd-production
